# stasys-tauri

./: .gitignore  build.sh  index.html  package.json
.github/workflows/: build_and_release.yml
src/: App.tsx  ShotUtils.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: calibrate.rs  camera.rs  main.rs  mic.rs  settings.rs  shoot.rs  thread.rs
src/Pages/: MainPage.tsx  SettingsPage.tsx
src/Pages/components/: LineChart.tsx  Mic.tsx  ScoreStatCard.tsx  ShotTable.tsx  Target.tsx  Webcam.tsx
