[package]
name = "stasys-tauri"
version = "0.0.1"
description = "An aim tracing application for air weapons"
authors = ["Meenatchi Sundaram Muthu Selva Annamalai"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.1", features = ["api-all"] }
ffmpeg-next = "5.1.1"
base64 = "0.13.0"
env_logger = "0.9.0"
log = "0.4.17"
opencv = "0.70.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
